News
====

.. contents::

svn trunk
---------

* I got a fever and the only prescription is more :mod:`paste.cowbell`!

* Fix :mod:`paste.httpserver` on Python 2.6.

* Fix :mod:`paste.auth.cookie`, which would insert newlines for long
  cookies.

* :mod:`paste.util.mimeparse` parses a single ``*`` in Accept headers
  (sent by IE 6).

1.7.2
-----

* In :mod:`paste.proxy`, added some more headers that are disallowed
  in WSGI (e.g., Keep-Alive).  Send Content-Length.  Also fix the
  missing query string when using :class:`paste.proxy.Proxy`
  (:class:`paste.proxy.TransparentProxy` already worked).

* Make :mod:`paste.debug.prints` work with Google App Engine.

* Make ``environ['wsgi.input']`` with :mod:`paste.httpserver` only
  have a ``seek`` method if it is wrapping something with a seek
  method (which usually it is not).

* In :mod:`paste.httpserver` re-raise KeyboardInterrupt in worker
  threads.

* Added support for the ``HttpOnly`` Cookie property to
  :mod:`paste.wsgiwrappers`

* Added :func:`paste.reloader.add_file_callback`, which lets you watch
  files based on a callback.

* Quiet Python 2.6 deprecation warnings.

* Fix :mod:`paste.auth.cookie` generating bad headers.

* Added :class:`paste.reloader.JythonMonitor` for an experimental,
  optimized reloader on Jython.

1.7.1
-----

* Normalize and make absolute the paths passed to
  :class:`paste.urlparser.StaticURLParser` (before passing a
  relative-to-cwd path to that class would cause Forbidden errors).

* Deprecate :func:`paste.fixture.setup_module`

1.7
---

* Fixed bug in :class:`paste.fixture.TestApp` that would submit forms
  with unnamed fields (like an unnamed submit button).  Also made
  checkboxes with no explicit ``value`` send ``on`` instead of
  ``checked`` (which is what browsers do).

* Fixed bug in :mod:`paste.httpserver` where
  ``environ['wsgi.input'].readline(max_size)`` ignored the max_size
  argument, which can lead to large memory usage (from Jakub Stolarski)
